master
- mayhem
  quote inlining default styling (by xat)

2.19.2
- mayhem
  update archives redirections
- aeosynth
  change unread favicons (by xat-)

2.19.1
- mayhem
  fix OP indication in expanded comments
  fix no.id links within cross thread/board inlined quote

2.19.0
- mayhem
  backlink formatting
  distinguishable unread favicons on white backgrounds
  fix updater refreshing 404'd threads
  fix backlinks added into inlined quotes
- aeosynth
  fix tab title for 404d threads

2.18.3
- mayhem
  fix quote features in expanded comments
  fix scrolling onto a quote not showing the preview

2.18.2
- aeosynth:
  fix long thread watcher titles
  fix normal form errors with an open empty QR

2.18.1
- mayhem:
  fix persistent qr not cleaning the file input
- aeosynth:
  updater: scroll background tabs

2.18.0
- mayhem:
  back to normal versioning
  bring back auto posting
  don't start the cooldown on thread creation
  limit the file upload dialog to the accepted file types (qr)
- aeosynth:
  show linebreaks as spaces in title & watcher
  auto posting fixes
  option to remember qr spoiler state

11.8.15
- aeosynth:
  convert qr from hidden iframes to ajax
  derp, nevermind. ajaxing reverted, still working on it in dev branch

11.8.11.1
- aeosynth:
  fix qr autohiding

11.8.11.0
- aeosynth:
  - rm auto post checkbox
    if (captcha filled or cached) and (text or file)
      auto post after cooldown
  - options updated immediately instead of requiring page refresh

11.8.10.1
- aeosynth:
  - persistent captchas (expiring after 4 hours, 55 minutes)
  - files upload in 'correct' order
  - manually submitting will use cached captchas

11.8.10.0
- aeosynth:
  - fix captcha caching on blank content

11.8.9.0
- aeosynth:
  - change green oval archive to gentoomen
  - validate filesize asap
  - show correct captcha cache length when creating qr
  - 1s delay when autoposting after errors to not look so automated
  - cache captcha on blank text / file

11.8.6.0
- mayhem: